--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
     <section class="categoria">
         <center><h2>Explicações e Fenomenos</h2></center>
         <div class="categoria-videos">   
-            <a href="https://www.youtube.com/watch?v=nCHh10awP3I">
-                <img src="https://img.youtube.com/vi/nCHh10awP3I/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=f7adeAYygKo">
+                <img src="https://img.youtube.com/vi/f7adeAYygKo/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Z8YtuRj5p20">
-                <img src="https://img.youtube.com/vi/Z8YtuRj5p20/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=v_MzW--hYwI">
+                <img src="https://img.youtube.com/v_MzW--hYwI/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=lv7fQkNNn7U">
-                <img src="https://img.youtube.com/vi/lv7fQkNNn7U/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=bwrCYUU1Jjk">
+                <img src="https://img.youtube.com/vi/bwrCYUU1Jjk/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=PHdrLRcOGCA">
-                <img src="https://img.youtube.com/vi/LINK_AQUI/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=L7OJm7sP2Uw">
+                <img src="https://img.youtube.com/vi/L7OJm7sP2Uw/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=1djhtYSs50U">
-                <img src="https://img.youtube.com/vi/1djhtYSs50U/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=CU-ePGIw41Q">
+                <img src="https://img.youtube.com/vi/ePGIw41Q/maxresdefault.jpg" />
             </a>
         </div>
     </section>
