--- a/index.html
+++ b/index.html
@@ -9,40 +9,37 @@
         rel="stylesheet"/>
 
         
-    <title>VERDÃO</title>
+    <title></title>
 </head>
 
 <body>
-   <center><header>PALMEIRAS FLIX</header></center> 
+   <center><header>HIP HOP FLIX</header></center> 
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1><N>PALMEIRAS</N></h1>
-            <p>MELHORES JOGOS</p>
-        </div>
-
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/urkuHAqwgFc?si=Ff8XJIr6SZHw95kS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h1><N>CARTEL mcs</N></h1>
+            <p>MELHORES MUSICAS<div>
+            <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/b_PdaCY8nTU?si=8z9TkbtcQlHViTmN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
     <section class="categoria">
         <center><h2>Explicações e Fenomenos</h2></center>
         <div class="categoria-videos">   
-            <a href="https://www.youtube.com/watch?v=f7adeAYygKo">
-                <img src="https://img.youtube.com/vi/f7adeAYygKo/maxresdefault.jpg" />
+            <a href="<iframe width="560" height="315" src="https://www.youtube.com/watch?v=AZle281wtvs">
+                <img src="https://img.youtube.com/vi/AZle281wtvs/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=v_MzW--hYwI">
-                <img src="https://img.youtube.com/v_MzW--hYwI/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=MQ5rdmwjNT4">
+                <img src="https://img.youtube.com/MQ5rdmwjNT4/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=bwrCYUU1Jjk">
-                <img src="https://img.youtube.com/vi/bwrCYUU1Jjk/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=eoiGDhTRGEs">
+                <img src="https://img.youtube.com/vi/eoiGDhTRGEs/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=L7OJm7sP2Uw">
-                <img src="https://img.youtube.com/vi/L7OJm7sP2Uw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=Mu4esW3TLWA">
+                <img src="https://img.youtube.com/vi/Mu4esW3TLWA/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=CU-ePGIw41Q">
-                <img src="https://img.youtube.com/vi/ePGIw41Q/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=fSHxccwEZ4Y">
+                <img src="https://img.youtube.com/vi/fSHxccwEZ4Y/maxresdefault.jpg" />
             </a>
         </div>
     </section>
